--- a/index.html
+++ b/index.html
@@ -10,68 +10,128 @@
   <title>Frontend Mentor | Insure landing page</title>
 </head>
 <body>
+  <header>
+    <div>
+      <img src="./assets/images/logo.svg" alt="Logo">
 
-  How we work
-  Blog
-  Account
-  View plans
+      <button>
+        <img src="./assets/images/icon-hamburger.svg" alt="Menu mobile">
+      </button>
 
-  Humanizing your insurance.
+      <nav>
+        <ul>
+          <li>How we work</li>
+          <li>Blog</li>
+          <li>Account</li>
+          <li>View plans</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  Get your life insurance coverage easier and faster. We blend our expertise 
-  and technology to help you find the plan that’s right for you. Ensure you 
-  and your loved ones are protected.
+  <section>
+    <div class="img-background"></div>
 
-  View plans
+    <div>
+      <h1>Humanizing your insurance.</h1>
 
-  We’re different
+      <p>Get your life insurance coverage easier and faster. We blend our expertise and technology to help you find the plan that’s right for you. Ensure you and your loved ones are protected.</p>
 
-  Snappy Process
-
-  Our application process can be completed in minutes, not hours. Don’t get 
-  stuck filling in tedious forms.
-
-  Affordable Prices
-
-  We don’t want you worrying about high monthly costs. Our prices may be low, 
-  but we still offer the best coverage possible.
-
-  People First
-
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make 
-  sure you’re covered when you need it.
-
-  Find out more about how we work
-
-  How we work
-
-  Our company
-
-  How we work
-  Why Insure?
-  View plans
-  Reviews
-
-  Help me
-
-  FAQ
-  Terms of use
-  Privacy policy
-  Cookies
-
-  Contact
-
-  Sales
-  Support
-  Live chat
-
-  Others
-
-  Careers
-  Press
-  Licenses
-
+      <button>View plans</button>
+    </div>
+  </section>
   
+  <section>
+    <h1>We’re different</h1>
+
+    <div>
+      <img src="./assets/images/icon-snappy-process.svg" alt="Snappy Process">
+
+      <h2>Snappy Process</h2>
+
+      <p>Our application process can be completed in minutes, not hours. Don’t get stuck filling in tedious forms.</p>
+    </div>
+
+    <div>
+      <img src="./assets/images/icon-affordable-prices.svg" alt="Affordable Price">
+
+      <h2>Affordable Prices</h2>
+
+      <p>We don’t want you worrying about high monthly costs. Our prices may be low, but we still offer the best coverage possible.</p>
+    </div>
+
+    <div>
+      <img src="./assets/images/icon-people-first.svg" alt="People First">
+
+      <h2>People First</h2>
+
+      <p>Our plans aren’t full of conditions and clauses to prevent payouts. We make sure you’re covered when you need it.</p>
+    </div>
+  </section>
+
+  <section>
+    <h1>Find out more about how we work</h1>
+
+    <button>How we work</button>
+  </section>
+
+  <footer>
+    <div>
+      <img src="./assets/images/logo.svg" alt="Logo">
+
+      <div>
+        <img src="./assets/images/icon-facebook.svg" alt="Facebook">
+        <img src="./assets/images/icon-twitter.svg" alt="Twitter">
+        <img src="./assets/images/icon-pinterest.svg" alt="Pinterest">
+        <img src="./assets/images/icon-instagram.svg" alt="Instagram">
+      </div>
+
+      <div>
+        <div>
+          <p>Our company</p>
+
+          <ul>
+            <li>How we work</li>
+            <li>Why Insure?</li>
+            <li>View plans</li>
+            <li>Reviews</li>
+          </ul>
+        </div>
+
+        <div>
+          <p>Help me</p>
+
+          <ul>
+            <li>FAQ</li>
+            <li>Terms of use</li>
+            <li>Privacy policy</li>
+            <li>Cookies</li>
+          </ul>
+        </div>
+
+        <div>
+          <p>Contact</p>
+
+          <ul>
+            <li>Sales</li>
+            <li>Support</li>
+            <li>Live chat</li>
+          </ul>
+        </div>
+
+        <div>
+          <p>Others</p>
+
+          <ul>
+            <li>Careers</li>
+            <li>Press</li>
+            <li>Licenses</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.renatonovaes.dev">Renato Novaes</a>.
