feat(index.html): classes to the header area

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <title>Frontend Mentor | Insure landing page</title>
 </head>
 <body>
-  <header>
-    <div>
+  <header id="header">
+    <div class="container">
       <img src="./assets/images/logo.svg" alt="Logo">
 
-      <button>
+      <button class="button-mobile">
         <img src="./assets/images/icon-hamburger.svg" alt="Menu mobile">
       </button>
 
-      <nav>
+      <nav class="menu">
         <ul>
           <li>How we work</li>
           <li>Blog</li>
