--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
     </div>
   </header>
 
-  <section>
+  <section id="home">
     <div class="img-background"></div>
+    
+    <div class="content">
+      <h1 class="title">Humanizing your insurance.</h1>
 
-    <div>
-      <h1>Humanizing your insurance.</h1>
+      <p class="description">Get your life insurance coverage easier and faster. We blend our expertise and technology to help you find the plan that’s right for you. Ensure you and your loved ones are protected.</p>
 
-      <p>Get your life insurance coverage easier and faster. We blend our expertise and technology to help you find the plan that’s right for you. Ensure you and your loved ones are protected.</p>
-
-      <button>View plans</button>
+      <button class="button-view-plans">View plans</button>
     </div>
   </section>
   
