feat(index.html): classes to the cards  area

--- a/index.html
+++ b/index.html
@@ -41,31 +41,31 @@
     </div>
   </section>
   
-  <section>
-    <h1>We’re different</h1>
+  <section id="cards">
+    <h1 class="title">We’re different</h1>
 
-    <div>
+    <div class="card">
       <img src="./assets/images/icon-snappy-process.svg" alt="Snappy Process">
 
-      <h2>Snappy Process</h2>
+      <h2 class="title">Snappy Process</h2>
 
-      <p>Our application process can be completed in minutes, not hours. Don’t get stuck filling in tedious forms.</p>
+      <p class="text">Our application process can be completed in minutes, not hours. Don’t get stuck filling in tedious forms.</p>
     </div>
 
-    <div>
+    <div class="card">
       <img src="./assets/images/icon-affordable-prices.svg" alt="Affordable Price">
 
-      <h2>Affordable Prices</h2>
+      <h2 class="title">Affordable Prices</h2>
 
-      <p>We don’t want you worrying about high monthly costs. Our prices may be low, but we still offer the best coverage possible.</p>
+      <p class="text">We don’t want you worrying about high monthly costs. Our prices may be low, but we still offer the best coverage possible.</p>
     </div>
 
-    <div>
+    <div class="card">
       <img src="./assets/images/icon-people-first.svg" alt="People First">
 
-      <h2>People First</h2>
+      <h2 class="title">People First</h2>
 
-      <p>Our plans aren’t full of conditions and clauses to prevent payouts. We make sure you’re covered when you need it.</p>
+      <p class="text">Our plans aren’t full of conditions and clauses to prevent payouts. We make sure you’re covered when you need it.</p>
     </div>
   </section>
 
