--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
     <h1 class="title">We’re different</h1>
 
     <div class="card">
-      <img src="./assets/images/icon-snappy-process.svg" alt="Snappy Process">
+      <img src="./assets/images/icon-snappy-process.svg" alt="Snappy Process" class="icon">
 
-      <h2 class="title">Snappy Process</h2>
+      <h2 class="subtitle">Snappy Process</h2>
 
       <p class="text">Our application process can be completed in minutes, not hours. Don’t get stuck filling in tedious forms.</p>
     </div>
 
     <div class="card">
-      <img src="./assets/images/icon-affordable-prices.svg" alt="Affordable Price">
+      <img src="./assets/images/icon-affordable-prices.svg" alt="Affordable Price" class="icon">
 
-      <h2 class="title">Affordable Prices</h2>
+      <h2 class="subtitle">Affordable Prices</h2>
 
       <p class="text">We don’t want you worrying about high monthly costs. Our prices may be low, but we still offer the best coverage possible.</p>
     </div>
 
     <div class="card">
-      <img src="./assets/images/icon-people-first.svg" alt="People First">
+      <img src="./assets/images/icon-people-first.svg" alt="People First" class="icon">
 
-      <h2 class="title">People First</h2>
+      <h2 class="subtitle">People First</h2>
 
       <p class="text">Our plans aren’t full of conditions and clauses to prevent payouts. We make sure you’re covered when you need it.</p>
     </div>
