feat(index.html): structure of box

--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
     </div>
   </section>
 
-  <section>
-    <h1>Find out more about how we work</h1>
+  <section id="box">
+    <div class="container">
+      <h1 class="title">Find out more about how we work</h1>
 
-    <button>How we work</button>
+      <button class="box-button">How we work</button>
+    </div>
   </section>
 
   <footer>
