feat(index.html): structure of the footer

--- a/index.html
+++ b/index.html
@@ -77,22 +77,24 @@
     </div>
   </section>
 
-  <footer>
-    <div>
-      <img src="./assets/images/logo.svg" alt="Logo">
+  <footer id="footer">
+    <div class="container">
+      <div class="footer-header">
+        <img src="./assets/images/logo.svg" alt="Logo" class="footer-logo">
 
-      <div>
-        <img src="./assets/images/icon-facebook.svg" alt="Facebook">
-        <img src="./assets/images/icon-twitter.svg" alt="Twitter">
-        <img src="./assets/images/icon-pinterest.svg" alt="Pinterest">
-        <img src="./assets/images/icon-instagram.svg" alt="Instagram">
+        <div class="social">
+          <img src="./assets/images/icon-facebook.svg" alt="Facebook">
+          <img src="./assets/images/icon-twitter.svg" alt="Twitter">
+          <img src="./assets/images/icon-pinterest.svg" alt="Pinterest">
+          <img src="./assets/images/icon-instagram.svg" alt="Instagram">
+        </div>
       </div>
 
-      <div>
-        <div>
-          <p>Our company</p>
+      <div class="menus">
+        <div class="menu-footer">
+          <p class="title">Our company</p>
 
-          <ul>
+          <ul class="menu-footer-list">
             <li>How we work</li>
             <li>Why Insure?</li>
             <li>View plans</li>
@@ -100,10 +102,10 @@
           </ul>
         </div>
 
-        <div>
-          <p>Help me</p>
+        <div class="menu-footer">
+          <p class="title">Help me</p>
 
-          <ul>
+          <ul class="menu-footer-list">
             <li>FAQ</li>
             <li>Terms of use</li>
             <li>Privacy policy</li>
@@ -111,20 +113,20 @@
           </ul>
         </div>
 
-        <div>
-          <p>Contact</p>
+        <div class="menu-footer">
+          <p class="title">Contact</p>
 
-          <ul>
+          <ul class="menu-footer-list">
             <li>Sales</li>
             <li>Support</li>
             <li>Live chat</li>
           </ul>
         </div>
 
-        <div>
-          <p>Others</p>
+        <div class="menu-footer">
+          <p class="title">Others</p>
 
-          <ul>
+          <ul class="menu-footer-list">
             <li>Careers</li>
             <li>Press</li>
             <li>Licenses</li>
