--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li>How we work</li>
           <li>Blog</li>
           <li>Account</li>
-          <li>View plans</li>
+          <li><button class="plans-menu">View plans</button></li>
         </ul>
       </nav>
     </div>
