--- a/index.html
+++ b/index.html
@@ -33,14 +33,16 @@
   </header>
 
   <section id="home">
-    <div class="img-background"></div>
-    
-    <div class="content">
-      <h1 class="title">Humanizing your insurance.</h1>
+    <div class="container">
+      <div class="img-background"></div>
+      
+      <div class="content">
+        <h1 class="title">Humanizing your insurance.</h1>
 
-      <p class="description">Get your life insurance coverage easier and faster. We blend our expertise and technology to help you find the plan that’s right for you. Ensure you and your loved ones are protected.</p>
+        <p class="description">Get your life insurance coverage easier and faster. We blend our expertise and technology to help you find the plan that’s right for you. Ensure you and your loved ones are protected.</p>
 
-      <button class="button-view-plans">View plans</button>
+        <button class="button-view-plans">View plans</button>
+      </div>
     </div>
   </section>
   
